--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,8 @@
 ></p-confirmDialog>
 
 <div>
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
   <!-- <h1>{{'Welcome to my-app' | reverse | uppercase}}</h1> -->
   <router-outlet></router-outlet>
-  <div>
-    <hr />
-    {{ "My App @  2023" | uppercase }}
-  </div>
+  
 </div>
