--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -24,7 +24,7 @@
 
   <a [routerLink]="['/books']" class="btn">Get Started</a>
 </div> -->
-
+<app-navbar></app-navbar>
 <div class="container pt-2">
   <div class="how-we-help position-relative mx-auto bgc-thm-light mt-3">
       <div class="container">
