--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/home"> <i class="bi bi-amd ms-2"></i> My App</a>
     <button
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-</nav> -->
+</nav> 
 
 <header id="header" class="nav-down">
   <nav class="nav_mn">
