--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -6,8 +6,8 @@
                 <div class="div_logo">
                     <div class="log_fotter" style="width: 100%;margin: 0 auto;">
                         <a style="width: 100%" href="/">
-                            <img width="255" height="54" style="display: block;" alt="Bất động sản online"
-                                src="https://batdongsanonline.vn/imgs/logo220_1.png"
+                            <img width="90px" height="auto" style="display: block;" alt="Bất động sản online"
+                                src="../../../assets/logo.png"
                                 class="      b-loaded b-loaded b-loaded">
                         </a>
                     </div>
