--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -49,8 +49,8 @@
       <div class="min_wrap">
           <a style="float: left;margin-top: 4px;" title="Bất động sản Online"
               href="https://batdongsanonline.vn"><img alt="Bất động sản Online" class="logo_mobile_res"
-                  src="https://batdongsanonline.vn//imgs/logo220_1.png" width="220" height="1"
-                  style="width: 220px;height:auto"> </a>
+                  src="../../../assets/logo.png" width="220" height="1"
+                  style="width: 90px ;height:auto"> </a>
           <ul class="ul_mn clearfix">
               <li class="menu-item ">
                   <a style="padding:0px 10px!important;" href="#">Nhà đất bán</a>
