--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -108,7 +108,10 @@
             dụng</a>
 
         </li>
+        <li class="menu-item ">
+          <a style="padding:0px 10px!important;" [routerLink]="['/chat']">Messenger</a>
 
+        </li>
         <li style="float: right;     margin-top: 8px;">
           <a style="line-height: 33px; padding: 0px 5px !important; " class="btn  v1 w-100 p-0 pl-3 pr-3"
             href="dang-tin-bat-dong-san/">Đăng Tin </a>
